Bug 1068177: Remove redundant assertion about const variable 'kDEBUGThreadSleepMS', to prevent MSVC warning about ~DEBUGThreadSlower never returning. r=bent