dom/indexedDB/ActorsParent.cpp
@@ -5380,7 +5380,6 @@ private:
   ~DEBUGThreadSlower()
   {
     AssertIsOnBackgroundThread();
-    MOZ_ASSERT(kDEBUGThreadSleepMS);
   }
 
   NS_DECL_NSITHREADOBSERVER
